--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ body {
 }
 
 /* fv */
-.fv {
+/* .fv {
   position: relative;
   z-index: 1;
 }
@@ -82,7 +82,7 @@ body {
 #hero-animation {
   width: 100%;
   height: 100%;
-}
+} */
 
 .fv-inner {
   max-width: calc(1190px + 40px * 2);
@@ -865,4 +865,11 @@ body {
 }
 .voom.is-active .voom-item:nth-child(8) {
   transition-delay: 0.75s;
+}
+
+.voom-item-texts {
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  gap: 18px;
 }
