--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ body {
 }
 
 /* fv */
-/* .fv {
+.fv {
   position: relative;
   z-index: 1;
 }
@@ -82,7 +82,7 @@ body {
 #hero-animation {
   width: 100%;
   height: 100%;
-} */
+}
 
 .fv-inner {
   max-width: calc(1190px + 40px * 2);
